--- a/product-page/styleProductPage.css
+++ b/product-page/styleProductPage.css
@@ -2,6 +2,7 @@
 .product-page * {
   box-sizing: border-box;
 }
+
 .product-page {
   background: #ffffff;
   width: 100%;
@@ -18,6 +19,7 @@
   left: 0px;
   bottom: 0px;
 }
+
 .background-footer {
   background-color: #808080;
   height: 100%;
@@ -28,10 +30,12 @@
   bottom: 0px;
   overflow: visible;
 }
+
 .social-icons {
   position: absolute;
   inset: 0;
 }
+
 .img-instagram {
   width: 50px;
   height: 50px;
@@ -40,6 +44,7 @@
   bottom: 87px;
   object-fit: cover;
 }
+
 .img-facebook {
   width: 50px;
   height: 50px;
@@ -48,6 +53,7 @@
   bottom: 147px;
   object-fit: cover;
 }
+
 .img-whatapp {
   width: 50px;
   height: 50px;
@@ -56,10 +62,12 @@
   bottom: 207px;
   object-fit: cover;
 }
+
 .txt-futer {
   position: absolute;
   inset: 0;
 }
+
 .txt-copy {
   color: #ffffff;
   text-align: center;
@@ -76,6 +84,7 @@
   align-items: center;
   justify-content: center;
 }
+
 .txt-footer {
   color: #ffffff;
   text-align: left;
@@ -88,6 +97,7 @@
   width: 142px;
   height: 14px;
 }
+
 .txt-footer2 {
   color: #ffffff;
   text-align: left;
@@ -100,6 +110,7 @@
   width: 152px;
   height: 14px;
 }
+
 .txt-footer3 {
   color: #ffffff;
   text-align: left;
@@ -112,6 +123,7 @@
   width: 101px;
   height: 14px;
 }
+
 .txt-footer4 {
   color: #ffffff;
   text-align: left;
@@ -124,6 +136,7 @@
   width: 93px;
   height: 14px;
 }
+
 .txt-footer5 {
   color: #ffffff;
   text-align: left;
@@ -136,6 +149,7 @@
   width: 93px;
   height: 14px;
 }
+
 .txt-footer6 {
   color: #ffffff;
   text-align: left;
@@ -148,6 +162,7 @@
   width: 101px;
   height: 14px;
 }
+
 .img-logo {
   width: 183px;
   height: 183px;
@@ -163,11 +178,13 @@
   width: 100%;
   height: 154px;
 }
+
 .header-logo {
   width: 100%;
   height: 154px;
   position: static;
 }
+
 .background-info {
   background: #ffffff;
   width: 100%;
@@ -176,6 +193,7 @@
   left: -3px;
   top: 0px;
 }
+
 .background-logo {
   border-radius: 0px;
   width: 474px;
@@ -197,6 +215,7 @@
   left: 87px;
   top: 0px;
 }
+
 .sin-t-tulo-1-removebg-preview-1 {
   flex-shrink: 0;
   width: 223px;
@@ -204,6 +223,7 @@
   position: relative;
   object-fit: cover;
 }
+
 .info-box {
   display: flex;
   flex-direction: row;
@@ -213,12 +233,14 @@
   flex-shrink: 0;
   position: relative;
 }
+
 .info-adress {
   flex-shrink: 0;
   width: 149px;
   height: 37px;
   position: static;
 }
+
 .frame-61 {
   display: flex;
   flex-direction: row;
@@ -229,6 +251,7 @@
   left: -12px;
   top: 18px;
 }
+
 .address-icon {
   flex-shrink: 0;
   width: 35px;
@@ -236,6 +259,7 @@
   position: relative;
   object-fit: cover;
 }
+
 .frame-60 {
   display: flex;
   flex-direction: column;
@@ -245,6 +269,7 @@
   flex-shrink: 0;
   position: relative;
 }
+
 .address {
   color: var(--navyblue, #001f3f);
   text-align: center;
@@ -253,6 +278,7 @@
   font-weight: 500;
   position: relative;
 }
+
 ._123-new-york-usa {
   color: #808080;
   text-align: center;
@@ -261,12 +287,14 @@
   font-weight: 400;
   position: relative;
 }
+
 .info-phone {
   flex-shrink: 0;
   width: 147px;
   height: 37px;
   position: static;
 }
+
 .frame-612 {
   display: flex;
   flex-direction: row;
@@ -277,6 +305,7 @@
   left: 157px;
   top: 18px;
 }
+
 .phone-icon {
   flex-shrink: 0;
   width: 35px;
@@ -284,6 +313,7 @@
   position: relative;
   object-fit: cover;
 }
+
 .phone-number {
   color: var(--navyblue, #001f3f);
   text-align: center;
@@ -292,6 +322,7 @@
   font-weight: 500;
   position: relative;
 }
+
 ._650-123-1212 {
   color: #808080;
   text-align: center;
@@ -300,12 +331,14 @@
   font-weight: 400;
   position: relative;
 }
+
 .info-email {
   flex-shrink: 0;
   width: 169px;
   height: 37px;
   position: static;
 }
+
 .frame-613 {
   display: flex;
   flex-direction: row;
@@ -316,6 +349,7 @@
   left: 324px;
   top: 18px;
 }
+
 .email-icon {
   flex-shrink: 0;
   width: 35px;
@@ -323,6 +357,7 @@
   position: relative;
   object-fit: cover;
 }
+
 .email-us-here {
   color: var(--navyblue, #001f3f);
   text-align: center;
@@ -331,6 +366,7 @@
   font-weight: 500;
   position: relative;
 }
+
 .example-gmail-com {
   color: #808080;
   text-align: center;
@@ -468,6 +504,7 @@ form input {
   overflow: hidden;
   height: 45px;
 }
+
 .options-navbar {
   display: flex;
   flex-direction: row;
@@ -542,6 +579,7 @@ input:focus {
   position: relative;
   overflow: hidden;
 }
+
 .txt-search {
   color: var(--navyblue, #001f3f);
   text-align: left;
@@ -550,6 +588,7 @@ input:focus {
   font-weight: 500;
   position: relative;
 }
+
 .lbl-search {
   border-radius: 0px;
   flex-shrink: 0;
@@ -561,546 +600,208 @@ input:focus {
 }
 
 
+/* ------------------------------------------------*/
 .product-cards {
+  width: 100%;
+  display: flex;
   position: absolute;
-  inset: 0;
-  height: 2985px;
-  top: 157px;
+  top: 160px;
+  flex-direction: column;
 }
-.group-cards-2 {
-  width: 1440px;
-  height: 1042.96px;
-  position: absolute;
-  left: calc(50% - 720px);
-  top: 1100px;
+
+
+.section-nav-product {
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-end;
+  padding-bottom: 10px; /*
 }
-.card-homepage {
-  background: #ffffff;
-  border-radius: 24px;
-  border-style: solid;
-  border-color: #2b6be7;
-  border-width: 2px;
+
+.txt-title-category {
+  margin: 0;
+  /* Elimina el margen predeterminado del h2 */
+}
+
+.btn-categoria {
+  padding: 10px 15px;
+  font-size: 14px;
+  cursor: pointer;
+  border: 1px solid #333;
+  border-radius: 5px;
+  background-color: #333;
+  color: #fff;
+  transition: background-color 0.3s ease;
+}
+
+.btn-categoria:hover {
+  background-color: #555;
+}
+
+
+
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;800&display=swap');
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: 'Open Sans';
+}
+
+.contenido {
+  max-width: 1200px;
+  width: 100%;
+  margin: 40px auto;
+  display: flex;
+}
+
+.mostrador {
+  width: 100%;
+  transition: .5s ease;
+}
+
+.mostrador .fila {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 40px;
+}
+
+.mostrador .fila .item {
+  max-width: 210px;
+  padding: 10px;
   width: 189px;
-  height: 320px;
-  position: absolute;
-  left: calc(50% - 622px);
-  top: 215px;
+  height: 250px;
+  border-radius: 24px;
+  text-align: center;
+  margin: 0 10px;
+  cursor: pointer;
+
+  display: grid;
+  text-align: center;
+}
+
+.mostrador .fila .item:hover {
+  background-color: #e6e6e6;
+}
+
+.mostrador .fila .item .contenedor-foto {
+  width: 100%;
+  height: 100%;
   overflow: hidden;
 }
-.txt-name-card {
-  color: #000000;
-  text-align: left;
-  font-family: "Inter-SemiBold", sans-serif;
-  font-size: 16px;
-  line-height: 120%;
-  font-weight: 600;
-  position: absolute;
-  left: 24px;
-  bottom: 80px;
-}
-.txt-price-card {
-  color: #2b6be7;
-  text-align: left;
-  font-family: "Inter-SemiBold", sans-serif;
-  font-size: 20px;
-  line-height: 130%;
-  font-weight: 600;
-  position: absolute;
-  left: 24px;
-  bottom: 50px;
-}
-.img-card {
-  position: absolute;
-  right: 6.12%;
-  left: 6.53%;
-  width: 87.35%;
-  bottom: 42.02%;
-  top: 3.99%;
-  height: 53.99%;
+
+.mostrador .fila .item .contenedor-foto img {
+  width: 100%;
+  height: 100%;
   object-fit: cover;
 }
-.card-homepage2 {
-  background: #ffffff;
-  border-radius: 24px;
-  border-style: solid;
-  border-color: #2b6be7;
-  border-width: 2px;
-  width: 189px;
-  height: 320px;
-  position: absolute;
-  left: calc(50% - 413px);
-  top: 215px;
-  overflow: hidden;
-}
-.card-homepage3 {
-  background: #ffffff;
-  border-radius: 24px;
-  border-style: solid;
-  border-color: #2b6be7;
-  border-width: 2px;
-  width: 189px;
-  height: 320px;
-  position: absolute;
-  left: calc(50% - 204px);
-  top: 215px;
-  overflow: hidden;
-}
-.card-homepage4 {
-  background: #ffffff;
-  border-radius: 24px;
-  border-style: solid;
-  border-color: #2b6be7;
-  border-width: 2px;
-  width: 189px;
-  height: 320px;
-  position: absolute;
-  left: calc(50% - -5px);
-  top: 215px;
-  overflow: hidden;
-}
-.card-homepage5 {
-  background: #ffffff;
-  border-radius: 24px;
-  border-style: solid;
-  border-color: #2b6be7;
-  border-width: 2px;
-  width: 189px;
-  height: 320px;
-  position: absolute;
-  left: calc(50% - -423px);
-  top: 215px;
-  overflow: hidden;
-}
-.card-homepage6 {
-  background: #ffffff;
-  border-radius: 24px;
-  border-style: solid;
-  border-color: #2b6be7;
-  border-width: 2px;
-  width: 189px;
-  height: 320px;
-  position: absolute;
-  left: calc(50% - -214px);
-  top: 215px;
-  overflow: hidden;
-}
-.card-homepage7 {
-  background: #ffffff;
-  border-radius: 24px;
-  border-style: solid;
-  border-color: #2b6be7;
-  border-width: 2px;
-  width: 189px;
-  height: 320px;
-  position: absolute;
-  left: calc(50% - 622px);
-  top: 606px;
-  overflow: hidden;
-}
-.txt-name-card2 {
-  color: #000000;
-  text-align: left;
+
+.mostrador .fila .item .descripcion {
+  color: #707070;
   font-family: "Inter-SemiBold", sans-serif;
   font-size: 16px;
-  line-height: 130%;
-  font-weight: 600;
-  position: absolute;
-  left: 24px;
-  bottom: 122px;
+  font-weight: bold;
 }
-.txt-price-card2 {
+
+.mostrador .fila .item .precio {
   color: #2b6be7;
-  text-align: left;
   font-family: "Inter-SemiBold", sans-serif;
+  font-weight: bold;
   font-size: 20px;
-  line-height: 130%;
-  font-weight: 600;
-  position: absolute;
-  left: 24px;
-  bottom: 87px;
 }
-.card-homepage8 {
-  background: #ffffff;
-  border-radius: 24px;
-  border-style: solid;
-  border-color: #2b6be7;
-  border-width: 2px;
-  width: 189px;
-  height: 320px;
-  position: absolute;
-  left: calc(50% - 413px);
-  top: 606px;
-  overflow: hidden;
+
+.mostrador .fila .item .detalles {
+  visibility: hidden;
 }
-.card-homepage9 {
-  background: #ffffff;
-  border-radius: 24px;
-  border-style: solid;
-  border-color: #2b6be7;
-  border-width: 2px;
-  width: 189px;
-  height: 320px;
-  position: absolute;
-  left: calc(50% - 204px);
-  top: 606px;
-  overflow: hidden;
-}
-.card-homepage10 {
-  background: #ffffff;
-  border-radius: 24px;
-  border-style: solid;
-  border-color: #2b6be7;
-  border-width: 2px;
-  width: 189px;
-  height: 320px;
-  position: absolute;
-  left: calc(50% - -5px);
-  top: 606px;
-  overflow: hidden;
-}
-.card-homepage11 {
-  background: #ffffff;
-  border-radius: 24px;
-  border-style: solid;
-  border-color: #2b6be7;
-  border-width: 2px;
-  width: 189px;
-  height: 320px;
-  position: absolute;
-  left: calc(50% - -423px);
-  top: 606px;
-  overflow: hidden;
-}
-.card-homepage12 {
-  background: #ffffff;
-  border-radius: 24px;
-  border-style: solid;
-  border-color: #2b6be7;
-  border-width: 2px;
-  width: 189px;
-  height: 320px;
-  position: absolute;
-  left: calc(50% - -214px);
-  top: 606px;
-  overflow: hidden;
-}
-.section-nav-product {
-  background: #ffffff;
-  height: 153px;
-  position: absolute;
-  right: 0px;
-  left: 0px;
-  top: 0px;
-  overflow: hidden;
-}
-.divider {
-  border-style: solid;
-  border-color: #e6e6e6;
-  border-width: 2px 0 0 0;
-  height: 0px;
-  position: absolute;
-  right: 86.91px;
-  left: 86px;
-  bottom: 0px;
-  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
-  transform-origin: 0 0;
-  transform: rotate(0deg) scale(1, 1);
-}
-.btn-categoria {
-  background: #ffffff;
-  border-radius: 20px;
-  border-style: solid;
-  border-color: #ebebeb;
-  border-width: 1px;
-  padding: 10px 16px 10px 16px;
-  width: 98px;
-  height: 38px;
-  position: absolute;
-  right: 213px;
-  bottom: 42px;
-  overflow: hidden;
-}
-.txt-categoria {
-  color: #000000;
-  text-align: center;
-  font-family: "Inter-SemiBold", sans-serif;
-  font-size: 16px;
-  line-height: 130%;
-  font-weight: 600;
-  position: absolute;
-  left: calc(50% - 38px);
-  top: calc(50% - 10.5px);
+
+.seleccion {
+  transition: .5s ease;
+  opacity: 0;
+  width: 0%;
+  border: 1px solid #ccc;
+  position: relative;
   display: flex;
-  align-items: center;
+  flex-direction: column;
   justify-content: center;
-}
-.btn-filtrar {
-  background: #ffffff;
-  border-radius: 20px;
-  border-style: solid;
-  border-color: #ebebeb;
-  border-width: 1px;
-  padding: 10px 16px 10px 16px;
-  width: 98px;
-  height: 38px;
-  position: absolute;
-  right: 102px;
-  bottom: 42px;
   overflow: hidden;
+  border-radius: 24px;
 }
-.txt-filtrar {
-  color: #000000;
-  text-align: center;
-  font-family: "Inter-SemiBold", sans-serif;
-  font-size: 16px;
-  line-height: 130%;
-  font-weight: 600;
+
+.cerrar {
   position: absolute;
-  left: calc(50% - 23px);
-  top: calc(50% - 10.5px);
-  display: flex;
-  align-items: center;
-  justify-content: center;
+  right: 0;
+  top: 20px;
+  right: 20px;
+  cursor: pointer;
 }
-.txt-title-category {
-  color: #000000;
-  text-align: left;
-  font-family: "MergeOne-Regular", sans-serif;
-  font-size: 64px;
-  line-height: 120%;
-  font-weight: 400;
-  position: absolute;
-  left: 102px;
-  bottom: 38px;
+
+.info {
+  padding: 20px;
+}
+
+.info img {
+  display: block;
+  margin: 30px auto;
+  width: 80%;
+}
+
+.info h2 {
+  color: #707070;
+  margin-bottom: 10px;
+}
+
+.info p {
+  font-size: 14px;
+  color: #707070;
+  margin-bottom: 10px;
+}
+
+.info .precio {
+  font-size: 30px;
+  font-weight: bold;
+  color: #2b6be7;
+  margin-bottom: 10px;
+  display: block;
+}
+
+.info .fila {
   display: flex;
   align-items: flex-end;
-  justify-content: flex-start;
 }
-.group-cards-1 {
-  width: 1440px;
-  height: 1042.96px;
-  position: absolute;
-  left: calc(50% - 716px);
-  top: 40px;
+
+.info .fila label {
+  display: block;
+  margin-bottom: 10px;
 }
-.section-nav-product2 {
-  background: #ffffff;
-  height: 203px;
-  position: absolute;
-  right: 0px;
-  left: 0px;
-  top: -50px;
-  overflow: hidden;
+
+.info .fila input {
+  width: 100px;
+  font-size: 18px;
+  padding: 6px;
+  margin-right: 30px;
 }
-.add-product {
-  position: absolute;
-  inset: 0;
+
+.info .fila button {
+  height: 40px;
+  border: none;
+  padding: 0 10px;
+  color: #fff;
+  background-color: #2b6be7;
+  cursor: pointer;
+  border-radius: 15px;
 }
-.rectangle-35 {
-  border-radius: 0px;
-  width: 323px;
-  height: 55px;
-  position: absolute;
-  left: calc(50% - -310px);
-  top: 15px;
-  overflow: visible;
+
+.info .fila button:hover {
+  box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.4);
 }
-.agregar-nuevo-producto {
-  color: #1a8300;
-  text-align: center;
-  font-family: "Poppins-Medium", sans-serif;
-  font-size: 16px;
-  font-weight: 500;
-  position: absolute;
-  left: calc(50% - -378px);
-  top: 28px;
-  width: 238px;
-  height: 29.33px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-.image-1 {
-  border-radius: 50px;
-  width: 45px;
-  height: 45px;
-  position: absolute;
-  left: calc(50% - -318px);
-  top: 20px;
-  object-fit: cover;
-}
-.txt-crud {
-  color: #787878;
-  text-align: left;
-  font-family: "MergeOne-Regular", sans-serif;
-  font-size: 24px;
-  line-height: 130%;
-  font-weight: 400;
-  position: absolute;
-  left: calc(50% - 634px);
-  top: -8px;
-  width: 422px;
-  height: 96px;
-  display: flex;
-  align-items: center;
-  justify-content: flex-start;
-}
-.section-products {
-  position: absolute;
-  inset: 0;
-  top: 155px;
-  height: 700px;
-}
-.products-box {
-  width: 100%;
-  height: 700px;
-  position: static;
-}
-.selects {
-  width: 94px;
-  height: 23px;
-  position: static;
-}
-.ellipse-290 {
-  background: #d9d9d9;
-  border-radius: 50%;
-  width: 23px;
-  height: 23px;
-  position: absolute;
-  left: calc(50% - -26px);
-  top: 570px;
-}
-.ellipse-289 {
-  background: #d9d9d9;
-  border-radius: 50%;
-  width: 24px;
-  height: 23px;
-  position: absolute;
-  left: calc(50% - 10px);
-  top: 570px;
-}
-.ellipse-288 {
-  background: #d9d9d9;
-  border-radius: 50%;
-  width: 23px;
-  height: 23px;
-  position: absolute;
-  left: calc(50% - 45px);
-  top: 570px;
-}
-.productos {
-  color: #001f3f;
-  text-align: left;
-  font-family: "MergeOne-Regular", sans-serif;
-  font-size: 24px;
-  line-height: 130%;
-  font-weight: 400;
-  position: absolute;
-  left: calc(50% - 612px);
-  top: 90px;
-  width: 741px;
-  height: 96px;
-  display: flex;
-  align-items: center;
-  justify-content: flex-start;
-}
-.txt-crud2 {
-  color: #787878;
-  text-align: right;
-  font-family: "MergeOne-Regular", sans-serif;
-  font-size: 24px;
-  line-height: 130%;
-  font-weight: 400;
-  position: absolute;
-  left: calc(50% - 118px);
-  top: 90px;
-  width: 741px;
-  height: 96px;
-  display: flex;
-  align-items: center;
-  justify-content: flex-end;
-}
-.card-homepage13 {
-  background: #ffffff;
-  border-radius: 24px;
-  border-style: solid;
-  border-color: #2b6be7;
-  border-width: 2px;
-  width: 189px;
-  height: 320px;
-  position: absolute;
-  left: calc(50% - 612px);
-  top: 170px;
-  overflow: hidden;
-}
-.card-homepage14 {
-  background: #ffffff;
-  border-radius: 24px;
-  border-style: solid;
-  border-color: #2b6be7;
-  border-width: 2px;
-  width: 189px;
-  height: 320px;
-  position: absolute;
-  left: calc(50% - 403px);
-  top: 170px;
-  overflow: hidden;
-}
-.card-homepage15 {
-  background: #ffffff;
-  border-radius: 24px;
-  border-style: solid;
-  border-color: #2b6be7;
-  border-width: 2px;
-  width: 189px;
-  height: 320px;
-  position: absolute;
-  left: calc(50% - 194px);
-  top: 170px;
-  overflow: hidden;
-}
-.card-homepage16 {
-  background: #ffffff;
-  border-radius: 24px;
-  border-style: solid;
-  border-color: #2b6be7;
-  border-width: 2px;
-  width: 189px;
-  height: 320px;
-  position: absolute;
-  left: calc(50% - -15px);
-  top: 170px;
-  overflow: hidden;
-}
-.card-homepage17 {
-  background: #ffffff;
-  border-radius: 24px;
-  border-style: solid;
-  border-color: #2b6be7;
-  border-width: 2px;
-  width: 189px;
-  height: 320px;
-  position: absolute;
-  left: calc(50% - -433px);
-  top: 170px;
-  overflow: hidden;
-}
-.card-homepage18 {
-  background: #ffffff;
-  border-radius: 24px;
-  border-style: solid;
-  border-color: #2b6be7;
-  border-width: 2px;
-  width: 189px;
-  height: 320px;
-  position: absolute;
-  left: calc(50% - -224px);
-  top: 170px;
-  overflow: hidden;
-}
+
+/* --------------------------------------------------------- */
 section {
   padding: 20PX;
 }
+
 body {
-  height: 1000px; /* Ajusta según tus necesidades */
+  height: 1000px;
+  /* Ajusta según tus necesidades */
 }
