--- a/product-page/styleProductPage.css
+++ b/product-page/styleProductPage.css
@@ -553,205 +553,221 @@ input:focus {
   border-radius: 50px;
 }
 
-
-/* ------------------------------------------------*/
-.product-cards {
-  width: 100%;
-  display: flex;
-  position: absolute;
-  top: 160px;
-  flex-direction: column;
-}
-
-
-.section-nav-product {
-  display: flex;
-  justify-content: space-between;
-  align-items: flex-end;
-  padding-bottom: 10px; /*
-}
-
-.txt-title-category {
-  margin: 0;
-  /* Elimina el margen predeterminado del h2 */
-}
-
-.btn-categoria {
-  padding: 10px 15px;
-  font-size: 14px;
-  cursor: pointer;
-  border: 1px solid #333;
-  border-radius: 5px;
-  background-color: #333;
-  color: #fff;
-  transition: background-color 0.3s ease;
-}
-
-.btn-categoria:hover {
-  background-color: #555;
-}
-
-
+/* ------------------------------------------ */
 
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;800&display=swap');
 
 * {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  font-family: 'Open Sans';
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: 'Open Sans';
 }
 
-.contenido {
-  max-width: 1200px;
-  width: 100%;
-  margin: 40px auto;
-  display: flex;
+.cotenedor-productpage {
+    display: flex;
 }
+.contenido {
+    max-width: 1200px;
+    width: 100%;
+    margin: 40px auto;
+}
+
+/* --------------------------------------------------- */
+.category-section {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 20px;
+    border-bottom: 2px solid #ccc;
+    margin-bottom: 20px;
+}
+
+.category-title {
+    font-family: "Merge One";
+    font-size: 54px;
+    margin: 0;
+}
+
+.category-buttons {
+    display: flex;
+    gap: 10px; /* Espacio entre los elementos hijos */
+}
+
+.category-buttons label {
+    margin-right: 5px; /* Espacio entre las etiquetas y los <select> */
+}
+
+.category-buttons select {
+    border: none; /* Elimina el borde predeterminado de los <select> */
+    padding: 5px; /* Añade un poco de relleno a los <select> para mejorar la apariencia */
+}
+
+
+/* --------------------------------------------------- */
+
 
 .mostrador {
-  width: 100%;
-  transition: .5s ease;
+    width: 100%;
+    transition: .5s ease;
 }
 
 .mostrador .fila {
-  width: 100%;
-  display: flex;
-  justify-content: space-between;
-  margin-bottom: 40px;
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 40px;
 }
 
 .mostrador .fila .item {
-  max-width: 210px;
-  padding: 10px;
-  width: 189px;
-  height: 250px;
-  border-radius: 24px;
-  text-align: center;
-  margin: 0 10px;
-  cursor: pointer;
-  border: 1px;
-  border-style: solid;
-  border-color: #2b6be7;
-
-  display: grid;
-  text-align: center;
+    max-width: 210px;
+    padding: 10px;
+    width: 189px;
+  height: 250px;;
+    border-radius: 24px;
+    text-align: center;
+    margin: 0 10px;
+    cursor: pointer;
+    border: 1px;
+    border-style: solid;
+    border-color: #2b6be7;
+    display: grid;
+    text-align: center;
 }
 
 .mostrador .fila .item:hover {
-  background-color: #e6e6e6;
+    background-color: #e6e6e6;
 }
 
 .mostrador .fila .item .contenedor-foto {
-  width: 100%;
-  height: 100%;
-  overflow: hidden;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
 }
 
 .mostrador .fila .item .contenedor-foto img {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
 }
 
 .mostrador .fila .item .descripcion {
-  color: #707070;
-  font-family: "Inter-SemiBold", sans-serif;
-  font-size: 16px;
-  font-weight: bold;
+    color: #707070;
+    font-family: "Inter-SemiBold", sans-serif;
+    font-size: 16px;
+    font-weight: bold;
 }
 
 .mostrador .fila .item .precio {
-  color: #2b6be7;
-  font-family: "Inter-SemiBold", sans-serif;
-  font-weight: bold;
-  font-size: 20px;
+    color: #2b6be7;
+    font-family: "Inter-SemiBold", sans-serif;
+    font-weight: bold;
+    font-size: 20px;
+}
+.mostrador .fila .item .detalles {
+    visibility: hidden;
 }
 
-.mostrador .fila .item .detalles {
-  font-size: 0px;
-  visibility: hidden;
-}
+/* --------------------------------------------------- */
 
 .seleccion {
-  transition: .5s ease;
-  opacity: 0;
-  width: 0%;
-  border: 1px solid #ccc;
-  position: relative;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  overflow: hidden;
-  border-radius: 24px;
+    transition: .5s ease;
+    opacity: 0;
+    width: 0%;
+    border: 1px solid #ccc;
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    overflow: hidden;
+    border-radius: 24px;
 }
 
 .cerrar {
-  position: absolute;
-  right: 0;
-  top: 20px;
-  right: 20px;
-  cursor: pointer;
+    position: absolute;
+    right: 0;
+    top: 20px;
+    right: 20px;
+    cursor: pointer;
 }
 
 .info {
-  padding: 20px;
+    padding: 20px;
 }
 
 .info img {
-  display: block;
-  margin: 30px auto;
-  width: 80%;
+    display: block;
+    margin: 30px auto;
+    width: 80%;
 }
 
 .info h2 {
-  color: #707070;
-  margin-bottom: 10px;
+    color: #707070;
+    margin-bottom: 10px;
 }
 
 .info p {
-  font-size: 14px;
-  color: #707070;
-  margin-bottom: 10px;
+    font-size: 14px;
+    color: #707070;
+    margin-bottom: 10px;
 }
 
 .info .precio {
-  font-size: 30px;
-  font-weight: bold;
-  color: #2b6be7;
-  margin-bottom: 10px;
-  display: block;
+    font-size: 30px;
+    font-weight: bold;
+    color: #2b6be7;
+    margin-bottom: 10px;
+    display: block;
 }
 
 .info .fila {
-  display: flex;
-  align-items: flex-end;
+    display: flex;
+    align-items: flex-end;
 }
 
 .info .fila label {
-  display: block;
-  margin-bottom: 10px;
+    display: block;
+    margin-bottom: 10px;
 }
 
 .info .fila input {
-  width: 100px;
-  font-size: 18px;
-  padding: 6px;
-  margin-right: 30px;
+    width: 100px;
+    font-size: 18px;
+    padding: 6px;
+    margin-right: 30px;
 }
 
 .info .fila button {
-  height: 40px;
-  border: none;
-  padding: 0 10px;
-  color: #fff;
-  background-color: #2b6be7;
-  cursor: pointer;
-  border-radius: 15px;
+    height: 40px;
+    border: none;
+    padding: 0 10px;
+    color: #fff;
+    background-color: #2b6be7;
+    cursor: pointer;
+    border-radius: 15px;
+    visibility: hidden;
 }
 
 .info .fila button:hover {
-  box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.4);
+    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.4);
+}
+
+.size {
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 10px;
+    visibility: hidden;
+}
+
+.size label {
+    margin-bottom: 5px;
+}
+
+.size input {
+    border-radius: 8px; /* Ajusta el valor según tu preferencia */
+    padding: 8px;
+    border: 1px solid #ccc;
+    outline: none; /* Elimina el contorno al hacer clic */
 }
 
 /* --------------------------------------------------------- */
