--- a/product-page/styleProductPage.css
+++ b/product-page/styleProductPage.css
@@ -172,6 +172,7 @@
   object-fit: cover;
 }
 
+/* --------------------- header -------------------------*/
 header {
   background-color: #fff;
   padding: 0px;
@@ -374,14 +375,10 @@ header {
   position: relative;
 }
 
-button {
-  cursor: pointer;
-  border: 1px;
-}
+/* ------ login ------*/
 
-button:hover #login {
-  border-radius: 14px;
-}
+
+
 
 .login {
   flex-shrink: 0;
@@ -389,6 +386,9 @@ button:hover #login {
   height: 73px;
   position: static;
   border-radius: 20px;
+  cursor: pointer;
+  border: 1px;
+  background-color: #f2f2f2;
 }
 
 
@@ -425,6 +425,79 @@ button:hover #login {
   top: 16px;
   object-fit: cover;
 }
+
+/* --------------------- ventana emergente inicio sesion -----------------------*/
+
+.modal {
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  padding: 20px;
+  background-color: #fff;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  z-index: 1000;
+}
+
+.modal-contenido {
+  background-color: #fefefe;
+  margin: 10% auto;
+  padding: 20px;
+  border: 1px solid #888;
+  width: 40%;
+  position: relative;
+  text-align: center;
+  z-index: 1000;
+  border-radius: 30px;
+}
+
+.modal-contenido h2 {
+  margin-top: 30px;
+  font-family: Poppins;
+  font-size: 40px;
+  color: #000;
+}
+
+.modal-contenido h3 {
+  margin-top: 10px;
+  color: #636363;
+  font-family: Poppins;
+  font-size: 15px;
+}
+
+.modal-contenido form {
+  padding: 20px;
+  margin-top: 30px;
+}
+
+.modal-contenido input {
+  border-radius: 11px;
+  border: 1px solid #001F3F;
+  background: #FFF;
+}
+
+.modal-contenido button {
+  margin-top: 20px;
+  width: 400px;
+  height: 45px;
+  background-color: #304C78;
+  border-radius: 100px;
+  color: #FFF;
+  font-family: Poppins;
+  font-size: 16px;
+}
+
+.cerrar-modal {
+
+  position: absolute;
+  top: 10px;
+  right: 30px;
+  font-size: 40px;
+  cursor: pointer;
+}
+
+
+/* --------------------- fin header -----------------------*/
 
 /* -------------------------- nabvar ------------------------- */
 
@@ -518,39 +591,18 @@ input:focus {
   outline: none;
   border-color: #304c78;
   box-shadow: 0 0 5px #304c78;
-  
+
 }
 
-.backgrount-search {
-  background: #ffd700;
-  padding: 20px;
-  display: flex;
-  flex-direction: row;
-  gap: 30px;
-  align-items: center;
-  justify-content: flex-start;
-  flex-shrink: 0;
-  position: relative;
-  overflow: hidden;
-}
-
-.txt-search {
-  color: var(--navyblue, #001f3f);
-  text-align: left;
-  font-family: "Poppins-Medium", sans-serif;
-  font-size: 13px;
-  font-weight: 500;
-  position: relative;
-}
-
-.lbl-search {
-  border-radius: 0px;
-  flex-shrink: 0;
-  width: 281px;
-  height: 30px;
-  position: relative;
-  overflow: visible;
-  border-radius: 50px;
+/* Estilos para el modal */
+.modal {
+  display: none;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
 }
 
 /* ------------------------------------------ */
